@@ -1,10 +1,11 @@
 # This file is part of Pazpar2.
-check_SCRIPTS = test_http.sh test_icu.sh
+check_SCRIPTS = test_http.sh test_icu.sh test_post.sh
 
 EXTRA_DIST = run_pazpar2.sh marc21.xsl z3950_indexdata_com_marc.xml \
 	z3950_indexdata_com_gils.xml test_http.cfg \
 	gils_service.xml marc_service.xml marc21.mmap \
-	test_http_urls test_icu.cfg test_icu_urls $(check_SCRIPTS)
+	test_http_urls test_icu.cfg test_icu_urls \
+	test_post.cfg test_post_urls $(check_SCRIPTS)
 
 TESTS = $(check_SCRIPTS)
 
@@ -15,4 +16,5 @@ CONFIG_CLEAN_FILES=*.log *.dif
 dist-hook:
 	cp ${srcdir}/test_http_*.res $(distdir)
 	cp ${srcdir}/test_icu_*.res $(distdir)
+	cp ${srcdir}/test_post_*.res $(distdir)
 
